[gd_scene load_steps=11 format=3 uid="uid://dixfvkn68wwsg"]

[ext_resource type="Script" path="res://Enemies/domeo/domeo.gd" id="1_pyt2s"]
[ext_resource type="Script" path="res://Enemies/domeo/area_2d2.gd" id="2_fd7vx"]
[ext_resource type="Texture2D" uid="uid://ctvrmgtscyo4o" path="res://Enemies/domeo/domeo_1.png" id="3_2et3v"]
[ext_resource type="AudioStream" uid="uid://duwmhp3jt3pod" path="res://music/SFX/Battle Star2.wav" id="5_qngxj"]
[ext_resource type="Script" path="res://hazardpart.gd" id="6_bcyk5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7qpq"]
size = Vector2(22.3465, 37.1079)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qt5xh"]
size = Vector2(35.0297, 32.0317)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ycoc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2et3v")
}],
"loop": false,
"name": &"death",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2et3v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6iak"]
size = Vector2(35.0298, 32.7786)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ab5dg"]
size = Vector2(125.199, 17.7009)

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
scale = Vector2(1.65574, 1.61691)
script = ExtResource("1_pyt2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1.5099, 3.09232)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_h7qpq")

[node name="PlayerDetector" type="Area2D" parent="CharacterBody2D"]
position = Vector2(3.8147e-06, 0.618465)
script = ExtResource("2_fd7vx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/PlayerDetector"]
position = Vector2(-2.95073e-06, -12.3051)
shape = SubResource("RectangleShape2D_qt5xh")

[node name="RayCastRight" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(-1.13687e-13, 3.55271e-15)
target_position = Vector2(25.3663, -3.55271e-15)

[node name="RayCastLeft" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(1.90735e-06, 0)
target_position = Vector2(-25.3663, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(0.603959, -3.71078)
scale = Vector2(0.767326, 0.757085)
sprite_frames = SubResource("SpriteFrames_4ycoc")
animation = &"death"

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]
z_index = 3
position = Vector2(1.19209e-07, -15.4616)
script = ExtResource("2_fd7vx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
position = Vector2(1.84273e-06, 3.40158)
scale = Vector2(0.999997, 0.999997)
shape = SubResource("RectangleShape2D_t6iak")

[node name="BounceSound" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(1.19209e-07, -15.4616)
stream = ExtResource("5_qngxj")
volume_db = 5.0

[node name="Area2D2" type="Area2D" parent="CharacterBody2D"]
position = Vector2(-0.60396, 8.04003)
scale = Vector2(0.600586, 0.936563)
script = ExtResource("6_bcyk5")

[node name="HazardPart" type="CollisionShape2D" parent="CharacterBody2D/Area2D2"]
position = Vector2(1.00562, 5.28283)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_ab5dg")

[connection signal="body_entered" from="CharacterBody2D/PlayerDetector" to="CharacterBody2D" method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/PlayerDetector" to="CharacterBody2D" method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D/Area2D" method="_on_body_entered"]
